add streaming support for xml uploads