@@ -4,91 +4,428 @@ import com.joshfouchey.smsarchive.model.*;
 import com.joshfouchey.smsarchive.repository.ContactRepository;
 import com.joshfouchey.smsarchive.repository.MessageRepository;
 import lombok.extern.slf4j.Slf4j;
+import lombok.Getter;
 import net.coobird.thumbnailator.Thumbnails;
 import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.core.task.TaskExecutor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.w3c.dom.*;
-import org.xml.sax.SAXException;
 
 import javax.imageio.ImageIO;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
-import java.awt.*;
+import javax.sql.DataSource;
+import javax.xml.stream.XMLInputFactory;
+import javax.xml.stream.XMLStreamConstants;
+import javax.xml.stream.XMLStreamReader;
+import java.awt.Color;
+import java.awt.Graphics2D;
+import java.awt.Font;
 import java.awt.image.BufferedImage;
-import java.io.File;
 import java.nio.file.*;
 import java.time.Instant;
+import java.time.format.DateTimeParseException;
 import java.util.*;
-import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
+import org.apache.commons.io.input.CountingInputStream;
+import java.util.concurrent.atomic.AtomicLong;
+import com.google.common.annotations.VisibleForTesting;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.math.NumberUtils;
 
 @Slf4j
 @Service
 public class ImportService {
 
-    private static final Path MEDIA_ROOT = Paths.get("media/messages");
+    private boolean postgresDialect; // set via DataSource detection
 
     private static final String SENDER_ME = "me";
     private static final String ADDR_TYPE_FROM = "137";
     private static final String ADDR_TYPE_TO = "151";
     private static final int MSG_BOX_INBOX = 1;
     private static final int MSG_BOX_SENT = 2;
+    private static final String TEXT_PLAIN = "text/plain";
+    private static final String UNKNOWN_NORMALIZED = "__unknown__";
+    private static final String APPLICATION_SMIL = "application/smil";
+    private static final String IMPORT_FOLDER_KEY = "importFolder";
+    private static final String UNKNOWN_NUMBER_DISPLAY = "unknown";
+
+    // Media type sets & content-type mapping extracted to constants (avoid recreation each call)
+    private static final Set<String> SUPPORTED_THUMB_TYPES = Set.of(
+            "image/jpeg", "image/jpg", "image/png", "image/gif", "image/bmp"
+    );
+    private static final Set<String> UNSUPPORTED_IMAGE_TYPES = Set.of(
+            "image/heic", "image/heif"
+    );
+    private static final Map<String,String> CONTENT_TYPE_EXT_MAP = Map.ofEntries(
+            Map.entry("image/jpeg", ".jpg"),
+            Map.entry("image/jpg", ".jpg"),
+            Map.entry("image/png", ".png"),
+            Map.entry("image/gif", ".gif"),
+            Map.entry("image/bmp", ".bmp"),
+            Map.entry("image/heic", ".heic"),
+            Map.entry("image/heif", ".heic"),
+            Map.entry("video/mp4", ".mp4"),
+            Map.entry("video/3gpp", ".3gp"),
+            Map.entry("audio/mpeg", ".mp3"),
+            Map.entry("audio/ogg", ".ogg"),
+            Map.entry(TEXT_PLAIN, ".txt")
+    );
 
     private final MessageRepository messageRepo;
     private final ContactRepository contactRepo;
+    private TaskExecutor importTaskExecutor; // executor for async jobs (optional)
 
     // cache normalizedNumber -> Contact
     private final Map<String, Contact> contactCache = new ConcurrentHashMap<>();
+    private final Map<UUID, ImportProgress> progressMap = new ConcurrentHashMap<>(); // job progress tracking
 
-    public ImportService(MessageRepository messageRepo,
-                         ContactRepository contactRepo) {
+    @Value("${smsarchive.import.inline:false}")
+    private boolean importInline;
+
+    @Value("${smsarchive.import.batchSize:500}")
+    private int streamBatchSize;
+
+    @Value("${smsarchive.media.root:media/messages}")
+    private String mediaRoot;
+
+    private Path getMediaRoot() { return Paths.get(mediaRoot); }
+
+    public ImportService(MessageRepository messageRepo, ContactRepository contactRepo) {
         this.messageRepo = messageRepo;
         this.contactRepo = contactRepo;
     }
 
-    @CacheEvict(value = "analyticsDashboard", allEntries = true)
-    public int importFromXml(File xmlFile) throws ParserConfigurationException, SAXException, java.io.IOException {
-        Document doc = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(xmlFile);
-        doc.getDocumentElement().normalize();
-
-        int duplicateCount = 0;
-        List<Message> toPersist = new ArrayList<>();
-
-        List<Message> sms = processSmsNodes(doc.getElementsByTagName("sms"));
-        for (Message m : sms) {
-            if (isDuplicate(m)) { duplicateCount++; continue; }
-            toPersist.add(m);
-        }
-        List<Message> mms = processMultipartNodes(doc.getElementsByTagName("mms"), MessageProtocol.MMS);
-        for (Message m : mms) {
-            if (isDuplicate(m)) { duplicateCount++; continue; }
-            toPersist.add(m);
-        }
-        List<Message> rcs = processMultipartNodes(doc.getElementsByTagName("rcs"), MessageProtocol.RCS);
-        for (Message m : rcs) {
-            if (isDuplicate(m)) { duplicateCount++; continue; }
-            toPersist.add(m);
-        }
-
-        if (!toPersist.isEmpty()) {
-            messageRepo.saveAll(toPersist);
-        }
-        int imported = toPersist.size();
-        if (duplicateCount > 0) {
-            log.info("Import skipped {} duplicate messages (imported: {})", duplicateCount, imported);
-        } else {
-            log.info("Import completed with {} messages imported (no duplicates)", imported);
-        }
-        return imported;
+    // Remove multi-arg constructors added earlier
+    // @Autowired optional setter for TaskExecutor
+    @Autowired(required = false)
+    public void setImportTaskExecutor(@Qualifier("importTaskExecutor") TaskExecutor executor) {
+        this.importTaskExecutor = executor;
     }
+
+    @Autowired
+    public void setDataSource(DataSource ds) {
+        try {
+            String product = ds.getConnection().getMetaData().getDatabaseProductName();
+            this.postgresDialect = product != null && product.toLowerCase().contains("postgres");
+        } catch (Exception e) {
+            this.postgresDialect = false;
+        }
+    }
+
+    @VisibleForTesting
+    Instant parseInstant(String millisStr) {
+        if (StringUtils.isBlank(millisStr)) return Instant.EPOCH;
+        String trimmed = millisStr.trim();
+        if (NumberUtils.isDigits(trimmed)) {
+            try {
+                long ms = Long.parseLong(trimmed);
+                if (trimmed.length() <= 10) return Instant.ofEpochSecond(ms); // seconds heuristic
+                return Instant.ofEpochMilli(ms);
+            } catch (NumberFormatException ignored) { /* fall through to ISO parse */ }
+        }
+        try { return Instant.parse(trimmed); } catch (DateTimeParseException ex) { log.warn("Unparseable timestamp '{}'", millisStr); return Instant.EPOCH; }
+    }
+    private int parseInt(String val, int def) {
+        return NumberUtils.toInt(StringUtils.trimToEmpty(val), def);
+    }
+    private String nullIfBlank(String s) { return StringUtils.isBlank(s) ? null : s; }
+
+    // ===== Streaming Import (Large XML) =====
+    @CacheEvict(value = "analyticsDashboard", allEntries = true)
+    public UUID startImportAsync(Path xmlPath) throws Exception {
+        UUID jobId = UUID.randomUUID();
+        long size = Files.size(xmlPath);
+        ImportProgress progress = new ImportProgress(jobId, size);
+        progressMap.put(jobId, progress);
+        Runnable task = () -> runStreamingImportAsync(jobId, xmlPath);
+        if (importInline) {
+            task.run();
+            return jobId;
+        }
+        if (importTaskExecutor != null) {
+            importTaskExecutor.execute(task);
+        } else {
+            // Fallback: create a dedicated thread
+            Thread t = new Thread(task, "import-worker-fallback-" + jobId);
+            t.setDaemon(true);
+            t.start();
+        }
+        return jobId;
+    }
+    public ImportProgress getProgress(UUID id) { return progressMap.get(id); }
+
+    // Utility helpers
+    private String attr(XMLStreamReader r, String name) { return r.getAttributeValue(null, name); }
+
+    private XMLStreamReader createSecureXmlStreamReader(CountingInputStream cis) throws Exception {
+        XMLInputFactory factory = XMLInputFactory.newFactory();
+        factory.setProperty(XMLInputFactory.IS_COALESCING, Boolean.TRUE);
+        try { factory.setProperty("javax.xml.stream.isSupportingExternalEntities", Boolean.FALSE); } catch (Exception ignored) {}
+        try { factory.setProperty("javax.xml.stream.supportDTD", Boolean.FALSE); } catch (Exception ignored) {}
+        try { factory.setProperty("javax.xml.stream.isReplacingEntityReferences", Boolean.TRUE); } catch (Exception ignored) {}
+        return factory.createXMLStreamReader(cis);
+    }
+
+    @Getter
+    private static class ElementContext {
+        Message cur;
+        List<MessagePart> curParts;
+        List<Map<String,Object>> curMedia;
+        StringBuilder textAgg;
+        String suggestedName;
+        boolean inMultipart;
+        ElementContext(Message c, List<MessagePart> parts, List<Map<String,Object>> media, StringBuilder agg, String name, boolean multi) {
+            this.cur = c;
+            this.curParts = parts;
+            this.curMedia = media;
+            this.textAgg = agg;
+            this.suggestedName = name;
+            this.inMultipart = multi;
+        }
+    }
+
+    private void handleSms(Message cur, String suggestedName, ImportProgress progress, Set<String> seenKeys, List<Message> batch) {
+        finalizeStreamingContact(cur, suggestedName);
+        boolean dup = isDuplicateInRunOrDb(cur, seenKeys);
+        if (dup) {
+            progress.incDuplicateMessages();
+        } else {
+            batch.add(cur);
+            progress.incImportedMessages();
+        }
+        progress.incProcessedMessages();
+        flushStreamingIfNeeded(batch, progress);
+    }
+
+    protected void runStreamingImportAsync(UUID jobId, Path xmlPath) {
+        ImportProgress progress = progressMap.get(jobId);
+        if (progress == null) { log.warn("No progress entry for job {}", jobId); return; }
+        progress.setStatus("RUNNING");
+        progress.setStartedAt(Instant.now());
+        List<Message> batch = new ArrayList<>(streamBatchSize);
+        Set<String> seenKeys = new HashSet<>();
+        try (CountingInputStream cis = new CountingInputStream(Files.newInputStream(xmlPath))) {
+            XMLStreamReader r = createSecureXmlStreamReader(cis);
+            Message cur = null;
+            List<MessagePart> curParts = null;
+            List<Map<String,Object>> curMedia = null;
+            StringBuilder textAgg = null;
+            String suggestedName = null;
+            boolean inMultipart = false;
+            while (r.hasNext()) {
+                int evt = r.next();
+                if (evt == XMLStreamConstants.START_ELEMENT) {
+                    ElementContext ctx = new ElementContext(cur, curParts, curMedia, textAgg, suggestedName, inMultipart);
+                    ctx = handleStartElement(r, ctx, progress, seenKeys, batch);
+                    cur = ctx.cur;
+                    curParts = ctx.curParts;
+                    curMedia = ctx.curMedia;
+                    textAgg = ctx.textAgg;
+                    suggestedName = ctx.suggestedName;
+                    inMultipart = ctx.inMultipart;
+                } else if (evt == XMLStreamConstants.END_ELEMENT) {
+                    ElementContext ctx = new ElementContext(cur, curParts, curMedia, textAgg, suggestedName, inMultipart);
+                    ctx = handleEndElement(r, ctx, progress, seenKeys, batch);
+                    cur = ctx.cur;
+                    curParts = ctx.curParts;
+                    curMedia = ctx.curMedia;
+                    textAgg = ctx.textAgg;
+                    suggestedName = ctx.suggestedName;
+                    inMultipart = ctx.inMultipart;
+                }
+                progress.setBytesRead(cis.getByteCount());
+            }
+            flushStreamingBatch(batch, progress);
+            r.close();
+            progress.setDuplicateMessages((int) progress.getDuplicateMessages());
+            progress.setStatus("COMPLETED");
+            progress.setFinishedAt(Instant.now());
+            log.info("Streaming import {} completed: imported={}, duplicates={}", jobId, progress.getImportedMessages(), progress.getDuplicateMessages());
+        } catch (Exception e) {
+            log.error("Streaming import {} failed", jobId, e);
+            progress.setStatus("FAILED");
+            progress.setError(e.getMessage());
+            progress.setFinishedAt(Instant.now());
+        }
+    }
+
+    private ElementContext handleStartElement(XMLStreamReader r,
+                                              ElementContext ctx,
+                                              ImportProgress progress,
+                                              Set<String> seenKeys,
+                                              List<Message> batch) {
+        String local = r.getLocalName();
+        switch (local) {
+            case "sms" -> {
+                ctx.suggestedName = nullIfBlank(attr(r, "contact_name"));
+                ctx.cur = buildSmsStreaming(r);
+                handleSms(ctx.cur, ctx.suggestedName, progress, seenKeys, batch);
+                ctx.cur = null; ctx.suggestedName = null;
+            }
+            case "mms", "rcs" -> {
+                ctx.suggestedName = nullIfBlank(attr(r, "contact_name"));
+                ctx.cur = buildMultipartHeaderStreaming(r, local.equals("mms") ? MessageProtocol.MMS : MessageProtocol.RCS);
+                startMultipart();
+                ctx.curParts = new ArrayList<>();
+                ctx.curMedia = new ArrayList<>();
+                ctx.textAgg = new StringBuilder();
+                ctx.inMultipart = true;
+            }
+            case "part" -> {
+                if (ctx.inMultipart && ctx.cur != null) {
+                    handlePart(r, ctx.cur, ctx.curParts, ctx.curMedia, ctx.textAgg);
+                }
+            }
+            case "addr" -> {
+                if (ctx.inMultipart && ctx.cur != null) accumulateAddressStreaming(r, ctx.cur);
+            }
+            default -> { /* no-op */ }
+        }
+        return ctx;
+    }
+
+    private ElementContext handleEndElement(XMLStreamReader r,
+                                            ElementContext ctx,
+                                            ImportProgress progress,
+                                            Set<String> seenKeys,
+                                            List<Message> batch) {
+        String local = r.getLocalName();
+        if (ctx.inMultipart && ctx.cur != null && (local.equals("mms") || local.equals("rcs"))) {
+            finalizeMultipart(ctx.cur, ctx.suggestedName, ctx.curParts, ctx.curMedia, ctx.textAgg);
+            boolean dup = isDuplicateInRunOrDb(ctx.cur, seenKeys);
+            if (dup) { progress.incDuplicateMessages(); }
+            else { batch.add(ctx.cur); progress.incImportedMessages(); }
+            progress.incProcessedMessages();
+            flushStreamingIfNeeded(batch, progress);
+            ctx.cur = null; ctx.curParts = null; ctx.curMedia = null; ctx.textAgg = null; ctx.inMultipart = false; ctx.suggestedName = null;
+        }
+        return ctx;
+    }
+
+    // Re-added after refactor: placeholder hook for future metrics or state init
+    private void startMultipart() { /* placeholder for future metrics */ }
+
+    private void handlePart(XMLStreamReader r, Message cur, List<MessagePart> curParts, List<Map<String,Object>> curMedia, StringBuilder textAgg) {
+        MessagePart part = buildPartStreaming(r, cur, curParts.size());
+        curParts.add(part);
+        String ct = Optional.ofNullable(part.getContentType()).orElse("");
+        if (part.getText() != null && ct.startsWith(TEXT_PLAIN)) {
+            textAgg.append(part.getText()).append(' ');
+        }
+        if (!ct.equalsIgnoreCase(TEXT_PLAIN) && !ct.equalsIgnoreCase(APPLICATION_SMIL)) {
+            Map<String,Object> mediaMap = new LinkedHashMap<>();
+            mediaMap.put("seq", part.getSeq());
+            mediaMap.put("contentType", ct);
+            mediaMap.put("name", Optional.ofNullable(part.getName()).orElse(""));
+            mediaMap.put("filePath", part.getFilePath());
+            curMedia.add(mediaMap);
+        }
+    }
+
+    private void finalizeMultipart(Message cur, String suggestedName, List<MessagePart> curParts, List<Map<String,Object>> curMedia, StringBuilder textAgg) {
+        if (StringUtils.isBlank(cur.getBody()) && textAgg != null && !textAgg.isEmpty()) {
+            cur.setBody(textAgg.toString().trim());
+        }
+        if (curMedia != null && !curMedia.isEmpty()) cur.setMedia(Map.of("parts", curMedia));
+        cur.setParts(curParts);
+        finalizeStreamingContact(cur, suggestedName);
+    }
+
+    private boolean isDuplicateInRunOrDb(Message msg, Set<String> seenKeys) {
+        String key = buildDuplicateKey(msg);
+        if (seenKeys.contains(key)) return true;
+        boolean dbDup = isDuplicate(msg);
+        if (!dbDup) seenKeys.add(key);
+        return dbDup;
+    }
+    private String buildDuplicateKey(Message msg) {
+        String bodyNorm = msg.getBody() == null ? "" : msg.getBody().trim();
+        Long contactId = msg.getContact() == null ? null : msg.getContact().getId();
+        String contactStr = (contactId == null) ? "null" : contactId.toString();
+        return contactStr + "|" + msg.getTimestamp() + "|" + msg.getMsgBox() + "|" + msg.getProtocol() + "|" + bodyNorm;
+    }
+
+    private void flushStreamingIfNeeded(List<Message> batch, ImportProgress progress) { if (batch.size() >= streamBatchSize) flushStreamingBatch(batch, progress); }
+    private void flushStreamingBatch(List<Message> batch, ImportProgress progress) { if (batch.isEmpty()) return; try { messageRepo.saveAll(batch); batch.clear(); } catch (Exception e) { log.error("Batch persist failed size={}", batch.size(), e); progress.setStatus("FAILED"); progress.setError("Persistence error: " + e.getMessage()); } }
+    private Message buildSmsStreaming(XMLStreamReader r) { Message msg = new Message(); msg.setProtocol(MessageProtocol.SMS); msg.setTimestamp(parseInstant(r.getAttributeValue(null, "date"))); msg.setBody(r.getAttributeValue(null, "body")); int box = parseInt(r.getAttributeValue(null, "type"), 0); msg.setMsgBox(box); msg.setDirection(box == MSG_BOX_INBOX ? MessageDirection.INBOUND : MessageDirection.OUTBOUND); String address = r.getAttributeValue(null, "address"); if (msg.getDirection() == MessageDirection.INBOUND) { msg.setSender(address); msg.setRecipient(SENDER_ME); } else { msg.setSender(SENDER_ME); msg.setRecipient(address); } return msg; }
+    private Message buildMultipartHeaderStreaming(XMLStreamReader r, MessageProtocol protocol) { Message msg = new Message(); msg.setProtocol(protocol); msg.setTimestamp(parseInstant(r.getAttributeValue(null, "date"))); int box = parseInt(r.getAttributeValue(null, "msg_box"), 0); msg.setMsgBox(box); msg.setDirection(box == MSG_BOX_INBOX ? MessageDirection.INBOUND : MessageDirection.OUTBOUND); if (protocol == MessageProtocol.RCS) { String bodyAttr = nullIfBlank(r.getAttributeValue(null, "body")); if (bodyAttr != null) msg.setBody(bodyAttr); } return msg; }
+    private void accumulateAddressStreaming(XMLStreamReader r, Message msg) { String type = r.getAttributeValue(null, "type"), address = r.getAttributeValue(null, "address"); if (type == null || address == null) return; if (ADDR_TYPE_FROM.equals(type)) msg.setSender(address); else if (ADDR_TYPE_TO.equals(type)) { if (msg.getRecipient() == null || msg.getRecipient().isBlank()) msg.setRecipient(address); else msg.setRecipient(msg.getRecipient()+","+address); } }
+    private void finalizeStreamingContact(Message msg, String suggestedName) { if (msg.getMsgBox() != null) { if (msg.getMsgBox() == MSG_BOX_SENT) msg.setSender(SENDER_ME); else if (msg.getMsgBox() == MSG_BOX_INBOX) msg.setRecipient(SENDER_ME); } String counterparty = pickCounterparty(msg); Contact contact = resolveContact(counterparty, suggestedName); msg.setContact(contact); }
+    private MessagePart buildPartStreaming(XMLStreamReader r, Message msg, int idx) { MessagePart part = new MessagePart(); part.setMessage(msg); part.setSeq(parseInt(r.getAttributeValue(null, "seq"), idx)); part.setContentType(r.getAttributeValue(null, "ct")); part.setName(nullIfBlank(r.getAttributeValue(null, "name"))); part.setText(nullIfBlank(r.getAttributeValue(null, "text"))); String data = r.getAttributeValue(null, "data"); if (data != null && !data.isBlank()) { saveMediaPart(data, part).ifPresent(part::setFilePath); if (part.getFilePath() != null) { try { part.setSizeBytes(Files.size(Path.of(part.getFilePath()))); } catch (Exception ignored) {} } } return part; }
+
+    private Optional<String> saveMediaPart(String base64, MessagePart part) {
+        try {
+            Message message = part.getMessage();
+            Map<String,Object> metadata = message.getMetadata();
+            if (metadata == null) { metadata = new LinkedHashMap<>(); message.setMetadata(metadata); }
+            String folder = (String) metadata.computeIfAbsent(IMPORT_FOLDER_KEY, k -> UUID.randomUUID().toString());
+            Path dir = getMediaRoot().resolve(folder);
+            Files.createDirectories(dir);
+            String ext = guessExtension(part.getContentType(), part.getName());
+            Path original = dir.resolve("part" + part.getSeq() + ext);
+            Files.write(original, Base64.getDecoder().decode(base64));
+            String ctLower = Optional.ofNullable(part.getContentType()).map(String::toLowerCase).orElse("");
+            if (SUPPORTED_THUMB_TYPES.contains(ctLower)) {
+                try { Thumbnails.of(original.toFile()).size(400, 400).outputFormat("jpg").outputQuality(0.80).toFile(dir.resolve("part" + part.getSeq() + "_thumb.jpg").toFile()); } catch (Exception e) { log.warn("Thumbnail failed: {}", original, e); }
+            } else if (UNSUPPORTED_IMAGE_TYPES.contains(ctLower)) { createUnsupportedThumbnail(dir, part.getSeq()); }
+            return Optional.of(original.toString());
+        } catch (Exception e) { log.error("Media save failed", e); return Optional.empty(); }
+    }
+    private void createUnsupportedThumbnail(Path dir, int seq) { try { int w = 400, h = 400; BufferedImage img = new BufferedImage(w, h, BufferedImage.TYPE_INT_RGB); Graphics2D g = img.createGraphics(); g.setColor(Color.DARK_GRAY); g.fillRect(0,0,w,h); g.setColor(Color.WHITE); g.setFont(new Font("SansSerif", Font.BOLD, 32)); String text = "HEIC"; int tw = g.getFontMetrics().stringWidth(text); g.drawString(text, (w - tw)/2, h/2 - 10); g.setFont(new Font("SansSerif", Font.PLAIN, 20)); String sub = "Not Supported"; int sw = g.getFontMetrics().stringWidth(sub); g.drawString(sub, (w - sw)/2, h/2 + 25); g.dispose(); ImageIO.write(img, "jpg", dir.resolve("part" + seq + "_thumb.jpg").toFile()); } catch (Exception e) { log.warn("Failed to create unsupported thumbnail placeholder", e); } }
+
+    public static class ImportProgress {
+        private final UUID id;
+        private final long totalBytes;
+        private final AtomicLong bytesRead = new AtomicLong(0);
+        private final AtomicLong processedMessages = new AtomicLong(0);
+        private final AtomicLong importedMessages = new AtomicLong(0);
+        private final AtomicLong duplicateMessagesAtomic = new AtomicLong(0);
+        private volatile int duplicateMessages;
+        private volatile String status = "PENDING";
+        private volatile String error;
+        private volatile Instant startedAt;
+        private volatile Instant finishedAt;
+
+        public ImportProgress(UUID id, long totalBytes) { this.id=id; this.totalBytes=totalBytes; }
+
+        public long getBytesRead(){return bytesRead.get();}
+        public long getProcessedMessages(){return processedMessages.get();}
+        public long getImportedMessages(){return importedMessages.get();}
+        public long getDuplicateMessages(){return duplicateMessagesAtomic.get();}
+        public double getPercentBytes(){return totalBytes==0?0.0:Math.min(100.0,(getBytesRead()*100.0)/totalBytes);}
+        public UUID getId(){return id;}
+        public long getTotalBytes(){return totalBytes;}
+        public int getDuplicateMessagesFinal(){return duplicateMessages;}
+        public String getStatus(){return status;}
+        public String getError(){return error;}
+        public Instant getStartedAt(){return startedAt;}
+        public Instant getFinishedAt(){return finishedAt;}
+
+        void setStatus(String s){status=s;}
+        void setError(String e){error=e;}
+        void setStartedAt(Instant t){startedAt=t;}
+        void setFinishedAt(Instant t){finishedAt=t;}
+        void setBytesRead(long v){bytesRead.set(v);}
+        void incProcessedMessages(){processedMessages.incrementAndGet();}
+        void incImportedMessages(){importedMessages.incrementAndGet();}
+        void incDuplicateMessages(){duplicateMessagesAtomic.incrementAndGet();}
+        void setDuplicateMessages(int v){duplicateMessages=v;}
+    }
+    // ===== End Streaming Import =====
 
     private boolean isDuplicate(Message msg) {
         try {
             String normalizedBody = msg.getBody() == null ? null : msg.getBody().trim();
+            if (postgresDialect && msg.getContact() != null && msg.getContact().getId() != null) {
+                return messageRepo.existsDuplicateHash(
+                        msg.getContact().getId(),
+                        msg.getTimestamp(),
+                        msg.getMsgBox(),
+                        msg.getProtocol(),
+                        normalizedBody
+                );
+            }
             return messageRepo.existsDuplicate(
                     msg.getContact(),
                     msg.getTimestamp(),
@@ -100,96 +437,6 @@ public class ImportService {
             log.warn("Duplicate check failed, proceeding to insert message: {}", e.getMessage());
             return false;
         }
-    }
-
-    private List<Message> processSmsNodes(NodeList nodes) {
-        return nodeListToStream(nodes)
-                .map(el -> {
-                    Message msg = new Message();
-                    msg.setProtocol(MessageProtocol.SMS);
-                    msg.setTimestamp(parseInstant(el.getAttribute("date")));
-                    msg.setBody(el.getAttribute("body"));
-
-                    int box = parseInt(el.getAttribute("type"), 0);
-                    msg.setMsgBox(box);
-                    msg.setDirection(box == MSG_BOX_INBOX ? MessageDirection.INBOUND : MessageDirection.OUTBOUND);
-
-                    String address = el.getAttribute("address");
-                    if (msg.getDirection() == MessageDirection.INBOUND) {
-                        msg.setSender(address);
-                        msg.setRecipient(SENDER_ME);
-                    } else {
-                        msg.setSender(SENDER_ME);
-                        msg.setRecipient(address);
-                    }
-
-                    String rawName = nullIfBlank(el.getAttribute("contact_name"));
-                    String counterparty = (msg.getDirection() == MessageDirection.INBOUND) ? msg.getSender() : msg.getRecipient();
-                    Contact contact = resolveContact(counterparty, rawName);
-                    msg.setContact(contact);
-
-                    return msg;
-                })
-                .toList();
-    }
-
-    private List<Message> processMultipartNodes(NodeList nodes, MessageProtocol protocol) {
-        return nodeListToStream(nodes)
-                .map(el -> {
-                    Message msg = new Message();
-                    msg.setProtocol(protocol);
-                    msg.setTimestamp(parseInstant(el.getAttribute("date")));
-                    int box = parseInt(el.getAttribute("msg_box"), 0);
-                    msg.setMsgBox(box);
-                    msg.setDirection(box == MSG_BOX_INBOX ? MessageDirection.INBOUND : MessageDirection.OUTBOUND);
-
-                    AddressInfo a = parseAddresses(el, box);
-                    msg.setSender(a.sender());
-                    msg.setRecipient(a.recipients());
-
-                    processParts(el, msg);
-
-                    if (protocol == MessageProtocol.RCS &&
-                            (msg.getBody() == null || msg.getBody().isBlank())) {
-                        msg.setBody(nullIfBlank(el.getAttribute("body")));
-                    }
-
-                    String rawName = nullIfBlank(el.getAttribute("contact_name"));
-                    String counterparty = pickCounterparty(msg);
-                    Contact contact = resolveContact(counterparty, rawName);
-                    msg.setContact(contact);
-
-                    return msg;
-                })
-                .toList();
-    }
-
-    private Contact resolveContact(String rawNumber, String suggestedName) {
-        if (rawNumber == null || rawNumber.isBlank()) {
-            return contactCache.computeIfAbsent("__unknown__", k ->
-                    contactRepo.findByNormalizedNumber("__unknown__")
-                            .orElseGet(() -> contactRepo.save(Contact.builder()
-                                    .number("unknown")
-                                    .normalizedNumber("__unknown__")
-                                    .name(suggestedName)
-                                    .build())));
-        }
-        String normalized = normalizeNumber(rawNumber);
-        return contactCache.computeIfAbsent(normalized, n ->
-                contactRepo.findByNormalizedNumber(n)
-                        .orElseGet(() -> contactRepo.save(Contact.builder()
-                                .number(rawNumber)
-                                .normalizedNumber(normalized)
-                                .name(suggestedName)
-                                .build())));
-    }
-
-    private String normalizeNumber(String num) {
-        String digits = num == null ? "" : num.replaceAll("[^0-9]", "");
-        if (digits.length() == 11 && digits.startsWith("1")) {
-            digits = digits.substring(1);
-        }
-        return digits;
     }
 
     private String pickCounterparty(Message msg) {
@@ -204,196 +451,42 @@ public class ImportService {
                 .orElse(null);
     }
 
-    private void processParts(Element parent, Message msg) {
-        List<MessagePart> parts = new ArrayList<>();
-        List<Map<String, Object>> mediaParts = new ArrayList<>();
-        StringBuilder textAgg = new StringBuilder();
-
-        NodeList partNodes = parent.getElementsByTagName("part");
-        for (int i = 0; i < partNodes.getLength(); i++) {
-            Element partEl = (Element) partNodes.item(i);
-            String ct = partEl.getAttribute("ct");
-
-            MessagePart part = new MessagePart();
-            part.setMessage(msg);
-            part.setSeq(i);
-            part.setContentType(ct);
-            part.setName(nullIfBlank(partEl.getAttribute("name")));
-            part.setText(nullIfBlank(partEl.getAttribute("text")));
-
-            if (part.getText() != null && "text/plain".equalsIgnoreCase(ct)) {
-                textAgg.append(part.getText()).append(' ');
-            }
-
-            String data = partEl.getAttribute("data");
-            if (data != null && !data.isBlank()) {
-                saveMediaPart(data, part).ifPresent(path -> {
-                    part.setFilePath(path);
-                    if (!"text/plain".equalsIgnoreCase(ct) && !"application/smil".equalsIgnoreCase(ct)) {
-                        String safeCt = (ct == null || ct.isBlank()) ? "application/octet-stream" : ct;
-                        String safeName = part.getName() == null ? "" : part.getName();
-                        Map<String, Object> mediaMap = new LinkedHashMap<>();
-                        mediaMap.put("seq", part.getSeq());
-                        mediaMap.put("contentType", safeCt);
-                        mediaMap.put("name", safeName);
-                        mediaMap.put("filePath", part.getFilePath());
-                        mediaParts.add(mediaMap);
-                    }
-                });
-            }
-            parts.add(part);
+    private Contact resolveContact(String rawNumber, String suggestedName) {
+        if (StringUtils.isBlank(rawNumber)) {
+            return contactCache.computeIfAbsent(UNKNOWN_NORMALIZED, k ->
+                    contactRepo.findByNormalizedNumber(UNKNOWN_NORMALIZED)
+                            .orElseGet(() -> contactRepo.save(Contact.builder()
+                                    .number(UNKNOWN_NUMBER_DISPLAY)
+                                    .normalizedNumber(UNKNOWN_NORMALIZED)
+                                    .name(suggestedName)
+                                    .build())));
         }
-
-        if (textAgg.length() > 0 && (msg.getBody() == null || msg.getBody().isBlank())) {
-            msg.setBody(textAgg.toString().trim());
-        }
-        if (!mediaParts.isEmpty()) {
-            msg.setMedia(Map.of("parts", mediaParts));
-        }
-        msg.setParts(parts);
+        String normalized = normalizeNumber(rawNumber);
+        return contactCache.computeIfAbsent(normalized, n ->
+                contactRepo.findByNormalizedNumber(n)
+                        .orElseGet(() -> contactRepo.save(Contact.builder()
+                                .number(rawNumber)
+                                .normalizedNumber(normalized)
+                                .name(suggestedName)
+                                .build())));
     }
 
-    // Added HEIC/HEIF unsupported thumbnail handling
-    private Optional<String> saveMediaPart(String base64, MessagePart part) {
-        final Set<String> SUPPORTED_THUMB_TYPES = Set.of("image/jpeg","image/jpg","image/png","image/gif","image/bmp");
-        final Set<String> UNSUPPORTED_IMAGE_TYPES = Set.of("image/heic","image/heif");
+    @VisibleForTesting
+    String normalizeNumber(String num) {
+        String digits = StringUtils.defaultString(num).replaceAll("\\D", "");
+        if (digits.length() == 11 && digits.startsWith("1")) digits = digits.substring(1);
+        return digits;
+    }
 
-        try {
-            String folder = Optional.ofNullable(part.getMessage().getId())
-                    .map(Object::toString)
-                    .orElse(UUID.randomUUID().toString());
-            Path dir = MEDIA_ROOT.resolve(folder);
-            Files.createDirectories(dir);
-
-            String ext = guessExtension(part.getContentType(), part.getName());
-            Path original = dir.resolve("part" + part.getSeq() + ext);
-            Files.write(original, Base64.getDecoder().decode(base64));
-
-            String ctLower = Optional.ofNullable(part.getContentType()).map(String::toLowerCase).orElse("");
-            if (SUPPORTED_THUMB_TYPES.contains(ctLower)) {
-                try {
-                    Thumbnails.of(original.toFile())
-                            .size(400, 400)
-                            .outputFormat("jpg")
-                            .outputQuality(0.80)
-                            .toFile(dir.resolve("part" + part.getSeq() + "_thumb.jpg").toFile());
-                } catch (Exception e) {
-                    log.warn("Thumbnail failed: {}", original, e);
-                }
-            } else if (UNSUPPORTED_IMAGE_TYPES.contains(ctLower)) {
-                createUnsupportedThumbnail(dir, part.getSeq());
-            }
-
-            return Optional.of(original.toString());
-        } catch (Exception e) {
-            log.error("Media save failed", e);
-            return Optional.empty();
+    @VisibleForTesting
+    String guessExtension(String contentType, String name) {
+        if (StringUtils.isNotBlank(name) && name.contains(".")) {
+            String ext = StringUtils.substringAfterLast(name, ".");
+            if (ext.length() <= 6) return "." + ext.toLowerCase();
         }
+        if (StringUtils.isBlank(contentType)) return ".bin";
+        String lower = contentType.toLowerCase();
+        return CONTENT_TYPE_EXT_MAP.getOrDefault(lower, ".bin");
     }
-
-    // Generates a simple placeholder jpg saying NOT SUPPORTED
-    private void createUnsupportedThumbnail(Path dir, int seq) {
-        try {
-            int w = 400, h = 400;
-            BufferedImage img = new BufferedImage(w, h, BufferedImage.TYPE_INT_RGB);
-            Graphics2D g = img.createGraphics();
-            g.setColor(Color.DARK_GRAY);
-            g.fillRect(0,0,w,h);
-            g.setColor(Color.WHITE);
-            g.setFont(new Font("SansSerif", Font.BOLD, 32));
-            String text = "HEIC";
-            int tw = g.getFontMetrics().stringWidth(text);
-            g.drawString(text, (w - tw)/2, h/2 - 10);
-            g.setFont(new Font("SansSerif", Font.PLAIN, 20));
-            String sub = "Not Supported";
-            int sw = g.getFontMetrics().stringWidth(sub);
-            g.drawString(sub, (w - sw)/2, h/2 + 25);
-            g.dispose();
-            ImageIO.write(img, "jpg", dir.resolve("part" + seq + "_thumb.jpg").toFile());
-        } catch (Exception e) {
-            log.warn("Failed to create unsupported thumbnail placeholder", e);
-        }
-    }
-
-    private Stream<Element> nodeListToStream(NodeList list) {
-        return IntStream.range(0, list.getLength())
-                .mapToObj(list::item)
-                .filter(Element.class::isInstance)
-                .map(Element.class::cast);
-    }
-
-    private Instant parseInstant(String ms) {
-        try {
-            return Instant.ofEpochMilli(Long.parseLong(ms));
-        } catch (Exception e) {
-            return Instant.now();
-        }
-    }
-
-    private int parseInt(String v, int def) {
-        try {
-            return Integer.parseInt(v);
-        } catch (Exception e) {
-            return def;
-        }
-    }
-
-    private String nullIfBlank(String s) {
-        return (s == null || s.isBlank()) ? null : s;
-    }
-
-    private record AddressInfo(String sender, String recipients) {}
-
-    private AddressInfo parseAddresses(Element parent, int msgBox) {
-        String sender = null;
-        List<String> recipients = new ArrayList<>();
-        NodeList addrNodes = parent.getElementsByTagName("addr");
-        for (int i = 0; i < addrNodes.getLength(); i++) {
-            Element addrEl = (Element) addrNodes.item(i);
-            String type = addrEl.getAttribute("type");
-            String address = addrEl.getAttribute("address");
-            if (ADDR_TYPE_FROM.equals(type)) sender = address;
-            else if (ADDR_TYPE_TO.equals(type)) recipients.add(address);
-        }
-        if (msgBox == MSG_BOX_SENT) {
-            sender = SENDER_ME;
-        } else if (msgBox == MSG_BOX_INBOX) {
-            recipients = List.of(SENDER_ME);
-        }
-        return new AddressInfo(sender, String.join(",", recipients));
-    }
-
-    private static final Map<String,String> CONTENT_TYPE_TO_EXTENSION = Map.ofEntries(
-            Map.entry("image/jpeg",".jpg"),
-            Map.entry("image/jpg",".jpg"),
-            Map.entry("image/png",".png"),
-            Map.entry("image/gif",".gif"),
-            Map.entry("image/webp",".webp"),
-            Map.entry("image/bmp",".bmp"),
-            Map.entry("image/heic",".heic"),
-            Map.entry("image/heif",".heif"),
-            Map.entry("video/mp4",".mp4"),
-            Map.entry("video/3gpp",".3gp"),
-            Map.entry("video/quicktime",".mov"),
-            Map.entry("video/webm",".webm"),
-            Map.entry("audio/mpeg",".mp3"),
-            Map.entry("audio/amr",".amr"),
-            Map.entry("audio/ogg",".ogg"),
-            Map.entry("audio/mp4",".m4a"),
-            Map.entry("audio/wav",".wav"),
-            Map.entry("application/pdf",".pdf"),
-            Map.entry("text/vcard",".vcf"),
-            Map.entry("text/x-vcard",".vcf")
-    );
-
-    private String guessExtension(String ct, String name) {
-        if (name != null) {
-            int i = name.lastIndexOf('.');
-            if (i >= 0) return name.substring(i).toLowerCase();
-        }
-        return Optional.ofNullable(ct)
-                .map(String::toLowerCase)
-                .map(CONTENT_TYPE_TO_EXTENSION::get)
-                .orElse("");
-    }
+    @VisibleForTesting String computeDuplicateKeyForTest(Message msg) { return buildDuplicateKey(msg); }
 }
